--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div>
-        <h1>Vector versus raster</h1>
+        <h1>Vector VS raster</h1>
         <img src="/assets/imgs/star.png" alt="A raster star">
         <img src="/assets/imgs/star.svg" alt="A vector star" role="img">
     </div>
